@@ -104,7 +104,10 @@ Vector<String> listDirectory(const String& path, const String& filter)
 {
     Vector<String> entries;
 
-    QFileInfoList fileInfoList = QDir(path).entryInfoList(QStringList(filter));
+    QStringList nameFilters;
+    if (!filter.isEmpty())
+        nameFilters.append(filter);
+    QFileInfoList fileInfoList = QDir(path).entryInfoList(nameFilters, QDir::AllEntries | QDir::NoDotAndDotDot);
     foreach (const QFileInfo fileInfo, fileInfoList) {
         String entry = String(fileInfo.absoluteFilePath());
         entries.append(entry);
