@@ -1,3 +1,13 @@
+2008-07-14  Simon Hausmann  <hausmann@webkit.org>
+
+        Reviewed by Holger.
+
+        Make listDirectory() in the Qt port work with empty namefilters.
+        Don't include . and .. to avoid scanning the parent directory.
+
+        * platform/qt/FileSystemQt.cpp:
+        (WebCore::listDirectory):
+
 2008-07-14  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Geoff Garen.
